#Android App Template 1) Post feature code package restructuring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".TemplateApplication"
         android:theme="@style/Theme.AndroidApplicationTemplate">
         <activity
-            android:name=".sample.PostActivity"
+            android:name=".sample.ui.PostActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
