--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,32 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidapplicationtemplate">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".TemplateApplication"
         android:theme="@style/Theme.AndroidApplicationTemplate">
         <activity
-            android:name=".sample.ui.PostActivity"
-            android:exported="true" >
+            android:name=".ui.someFeature.SomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.someFeature.SomeActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
