view binding enabled
Signed-off-by: MSI KATANA <mohammed.mahmood@semaai.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
     kapt {
         correctErrorTypes = true
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
